# boden-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/app/: main_view.cpp  (+5 more)
boden-gui/: CMakeLists.txt
boden-gui/boden/: backend.cpp  backend.hpp  builder.cpp  builder.hpp  button.cpp  button.hpp  constant.hpp  context.hpp  control.cpp  control.hpp  event.cpp  event.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  layer.cpp  layer.hpp  renderer.cpp  renderer.hpp  responder.cpp  responder.hpp  view.cpp  view.hpp  view_controller.cpp  view_controller.hpp
boden-gui/boden/asset/: image_library.cpp  image_library.hpp  image_library_ref.cpp  image_library_ref.hpp  stb_ref.cpp  stb_ref.hpp  texture_id.hpp
boden-gui/boden/draw/: command.hpp  draw_command.hpp  draw_index.hpp  draw_vertex.hpp  index.hpp  vertex.hpp
boden-gui/boden/geometry/: point.hpp  rect.hpp  size.hpp  vec.hpp
boden-gui/boden/layout/: color.hpp  point.hpp  rect.hpp  size.hpp  vec.hpp
boden-gui/boden/math/: normalize.hpp  vec.hpp
boden-gui/boden/platform/metal/: metal_renderer.cpp  metal_renderer.hpp
boden-gui/boden/widget/: button.cpp  button.hpp  control.cpp  control.hpp  image_view.cpp  image_view.hpp  view.cpp  view.hpp  view_controller.cpp  view_controller.hpp
boden-gui/cmake/: boost-external-project.cmake
boden-gui/tests/: BackendTests.cpp  BuilderTests.cpp  ButtonTests.cpp  CMakeLists.txt  ViewTests.cpp
boden-gui/tests/widget/: ButtonTests.cpp  ViewTests.cpp
demo-app/: AppDelegate.mm  AppViewController.h  AppViewController.mm  CMakeLists.txt  ViewController.h  ViewController.mm  WindowController.mm  main.mm
demo-app/Adapters/: BackendAdapter.h  BackendAdapter.mm
(+64 files in other folders)
